--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.5.15",
-    "sha256": "^0.2.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "express": "^4.17.1",
     "flatpickr": "^4.5.1",
+    "mongoose": "^5.5.15",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
+    "sha256": "^0.2.0",
     "vue": "^2.6.6",
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
