update node version

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "vue-cli-service build",
     "start": "npm run build && node server.js"
   },
+  "engines": {
+    "node": "6.1.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
